# SpatialRL

./: .gitignore  README.md  default_launch.json  deploy.json  spatialos.json  temp_includes
.improbable/schema_codegen_cache/: .cache.json
schema/improbable/gameplay/: GoalSphere.schema
schema/improbable/general/: WorldTransform.schema  WorldVelocity.schema
schema/improbable/player/: DroneControls.schema
schema/improbable/terrain/: Terrain.schema
snapshots/: initial_world.snapshot
workers/rlworker/: .gitignore  CMakeLists.txt  build.json  generate.sh  rlworker.cc  spatialos.RLWorker.worker.json  spatialos.rlworker.worker.json  spatialos_worker.json  spatialos_worker_packages.json
workers/rlworker/.improbable/schema_codegen_cache/cpp/: cpp.cache.json
workers/rlworker/.improbable/schema_codegen_cache/generated_ir/improbable/: standard_library.proto
workers/rlworker/.improbable/schema_codegen_cache/generated_ir/improbable/gameplay/: GoalSphere.proto
workers/rlworker/.improbable/schema_codegen_cache/generated_ir/improbable/general/: WorldTransform.proto  WorldVelocity.proto
workers/rlworker/.improbable/schema_codegen_cache/generated_ir/improbable/player/: DroneControls.proto  name.proto
workers/rlworker/.improbable/schema_codegen_cache/generated_ir/improbable/terrain/: Terrain.proto
workers/rlworker/tensorflow/tensorflow/blackbox/: BUILD  blackbox.cc
workers/rlworker/tensorflow/tensorflow/contrib/makefile/: download_dependencies.sh
workers/rlworker/tensorflow/tensorflow/contrib/pi_examples/camera/: Makefile
workers/rlworker/worker_sdk/: .spatialos_worker_target.json_hash
workers/rlworker/worker_sdk/include/improbable/: collections.h  defaults.h  entity_state.pb.h  worker.h
workers/rlworker/worker_sdk/include/improbable/detail/: collections.i.h  worker.i.h  worker_detail.h
workers/rlworker/worker_sdk/include/improbable/math/: coordinates.h  coordinates.pb.h  vector3d.h  vector3d.pb.h  vector3f.h  vector3f.pb.h
workers/rlworker/worker_sdk/lib/: gpr.lib  zlibstatic.lib
workers/unity/: spatialos.client.build.json  spatialos.fsim.build.json  spatialos_worker_packages.json
workers/unity/Assets/: ClientScene.unity  GoalMove.cs
workers/unity/Assets/Editor/: SnapshotMenu.cs
workers/unity/Assets/EntityPrefabs/: Drone.prefab  GoalSphere.prefab  Terrain.prefab
workers/unity/Assets/EntityTemplates/: DroneEntityTemplate.cs  GoalSphereEntityTemplate.cs  TerrainEntityTemplate.cs
workers/unity/Assets/Gamelogic/: CollisionDetect.cs  TransformReceiver.cs
workers/unity/Assets/Gamelogic/Controls/: DroneMovement.cs  PlayerControls.cs
workers/unity/ProjectSettings/: ProjectSettings.asset  TagManager.asset
